# parallel-computing

./: .gitignore  CMakeLists.txt  CMakeSettings.json  dev-requirements.txt  parallel-computing.cpp
.github/: conda-windows.ps1
.github/workflows/: test-vcpkg.yml
